k8s/eks/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: devops-case
spec:
  selector:
    app: backend

  type: ClusterIP
  ports:
    - protocol: TCP
      port: 5050
      targetPort: 5050
